# warp

./: LICENSE  README.md  pyproject.toml
docs/: architecture.md  install.md  safety.md  troubleshooting.md
src/warp/: __init__.py  capture.py  cli.py  config.py  constants.py  context_builder.py  db.py  doctor.py  embeddings.py  explain.py  git_context.py  history_import.py  models.py  normalize.py  orchestration.py  prediction.py  preferences.py  prompting.py  ranking.py  retrieval.py  safety.py  search.py  selectors.py  structured_output.py  utils.py  version.py
src/warp/backends/: __init__.py  local_llm_backend.py  model_base.py  openai_backend.py  rule_backend.py
src/warp/shell/: bash_integration.sh  zsh_integration.sh
tests/: test_capture.py  test_config.py  test_db.py  test_doctor.py  test_explain.py  test_normalize.py  test_prediction.py  test_preferences.py  test_ranking.py  test_retrieval.py  test_rule_backend.py  test_safety.py  test_search.py  test_selector.py  test_structured_output.py
